wip Bigger Stack
Edited the configuration file of terraform to include a more like Prod Stack.  The cluster should now be 3 master,2 Infras, 2 App nodes, 1 Logging and 1 Metric server.

--- a/inventory.template.cfg
+++ b/inventory.template.cfg
@@ -1,7 +1,10 @@
 # Create an OSEv3 group that contains the masters and nodes groups
 [OSEv3:children]
 masters
+etcd
 nodes
+#glusterfs_registry
+#glusterfs
 
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
@@ -25,18 +28,52 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # Uncomment the line below to enable metrics for the cluster.
 # openshift_hosted_metrics_deploy=true
 
+# Enabling the Audit Logging
+openshift_master_audit_config={"enabled": true}
+
+# Configure usage of openshift_clock role.
+openshift_clock_enabled=true
+
+# Configure the multi-tenant SDN plugin (default is 'redhat/openshift-ovs-subnet')
+os_sdn_network_plugin_name='redhat/openshift-ovs-multitenant'
+
+# Set to true to use firewalld instead of the default iptables.
+#os_firewall_use_firewalld=true
+
 # Create the masters host group. Be explicit with the openshift_hostname,
 # otherwise it will resolve to something like ip-10-0-1-98.ec2.internal and use
 # that as the node name.
 [masters]
-master.openshift.local openshift_hostname=master.openshift.local
+master1.openshift.local openshift_hostname=master1.openshift.local
+master2.openshift.local openshift_hostname=master2.openshift.local
+master3.openshift.local openshift_hostname=master3.openshift.local
 
 # host group for etcd
 [etcd]
-master.openshift.local
+master1.openshift.local
+master2.openshift.local
+master3.openshift.local
 
 # host group for nodes, includes region info
 [nodes]
-master.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+master1.openshift.local openshift_node_labels="{'region': 'masters', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+master2.openshift.local openshift_node_labels="{'region': 'masters', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+master3.openshift.local openshift_node_labels="{'region': 'masters', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+infra1.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+infra2.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+logging1.openshift.local openshift_node_labels="{'region': 'logging', 'zone': 'logging-es-node-1', 'logging-infra-fluentd': 'true'}"
+metric1.openshift.local openshift_node_labels="{'region': 'metric', 'zone': 'metric-node-1', 'logging-infra-fluentd': 'true'}"
 node1.openshift.local openshift_hostname=node1.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'east'}"
 node2.openshift.local openshift_hostname=node2.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'west'}"
+
+#[glusterfs_registry]
+#infra1.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
+#infra2.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
+#infra3.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
+
+#[glusterfs]
+#GlusterHost1.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
+#GlusterHost2.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
+#GlusterHost3.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
+
+#[scaleup_new_nodes]
