--- a/inventory.template.cfg
+++ b/inventory.template.cfg
@@ -19,8 +19,14 @@ deployment_type=origin
 
 # We need a wildcard DNS setup for our public access to services, fortunately
 # we can use the superb xip.io to get one for free.
-openshift_public_hostname=${aws_instance.master.public_ip}.xip.io
-openshift_master_default_subdomain=${aws_instance.master.public_ip}.xip.io
+openshift_public_hostname=${aws_lb.ocp-master-ingress-lb.public_dns}
+#Used for the routes
+openshift_master_default_subdomain=${aws_lb.ocp-infra-ingress-lb.public_dns}
+
+### Cluster Section 
+openshift_master_cluster_method=native
+openshift_master_cluster_hostname=${aws_lb.ocp-master-ingress-lb.public_dns}
+openshift_master_cluster_public_hostname=${aws_lb.ocp-master-ingress-lb.public_dns}
 
 # Use an htpasswd file as the indentity provider.
 openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
@@ -40,9 +46,6 @@ os_sdn_network_plugin_name='redhat/openshift-ovs-multitenant'
 # Set to true to use firewalld instead of the default iptables.
 #os_firewall_use_firewalld=true
 
-# Create the masters host group. Be explicit with the openshift_hostname,
-# otherwise it will resolve to something like ip-10-0-1-98.ec2.internal and use
-# that as the node name.
 [masters]
 master1.openshift.local openshift_hostname=master1.openshift.local
 master2.openshift.local openshift_hostname=master2.openshift.local
@@ -56,15 +59,15 @@ master3.openshift.local
 
 # host group for nodes, includes region info
 [nodes]
-master1.openshift.local openshift_node_labels="{'region': 'masters', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
-master2.openshift.local openshift_node_labels="{'region': 'masters', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
-master3.openshift.local openshift_node_labels="{'region': 'masters', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
-infra1.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
-infra2.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
-logging1.openshift.local openshift_node_labels="{'region': 'logging', 'zone': 'logging-es-node-1', 'logging-infra-fluentd': 'true'}"
-metric1.openshift.local openshift_node_labels="{'region': 'metric', 'zone': 'metric-node-1', 'logging-infra-fluentd': 'true'}"
-node1.openshift.local openshift_hostname=node1.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'east'}"
-node2.openshift.local openshift_hostname=node2.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'west'}"
+master1.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+master2.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+master3.openshift.local openshift_node_labels="{'region': 'infra', 'zone': 'default', 'logging-infra-fluentd': 'true'}"
+infra1.openshift.local openshift_hostname=infra1.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'infra', 'logging-infra-fluentd': 'true'}"
+infra2.openshift.local openshift_hostname=infra2.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'infrat', 'logging-infra-fluentd': 'true'}"
+logging1.openshift.local openshift_hostname=logging1.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'logging-es-node-1', 'logging-infra-fluentd': 'true'}"
+metric1.openshift.local openshift_hostname=metric1.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'metric-node-1', 'logging-infra-fluentd': 'true'}"
+node1.openshift.local openshift_hostname=node1.openshift.local openshift_hostname=node1.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'AppSrv1'}"
+node2.openshift.local openshift_hostname=node2.openshift.local openshift_hostname=node2.openshift.local openshift_node_labels="{'region': 'primary', 'zone': 'AppSrv2'}"
 
 #[glusterfs_registry]
 #infra1.openshift.local glusterfs_devices='[ "/dev/sde",  "/dev/sdf",  "/dev/sdg" ]'
